<resources>
    <string name="app_name">MoCa</string>

    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="resset_pass">Send Resset Password E-mail</string>
    <string name="save">Save</string>

    <string name="movie">Movie</string>
    <string name="tv_show">TV Shows</string>
    <string name="favorite"> Favorite</string>
    <string name="admin">Admin</string>

    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="genre">Genre</string>
    <string name="release">Release</string>
    <string name="rating">Rating</string>
    <string name="language">Language</string>
    <string name="deskripsi">Deskripsi</string>

    <string name="kategori">Kategori</string>
    <string name="choose_image">Choose Image</string>


</resources>
