<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/civ_avatar"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="127dp"
        tools:src="@drawable/logo"
        android:contentDescription="@string/app_name"
        app:civ_border_width="5dp"
        app:civ_border_color="#FFF"
        android:layout_weight="1"
        android:layout_marginRight="10dp"
        />

    <ImageView
        android:id="@+id/iv_Gallery"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_below="@+id/civ_avatar"
        android:layout_marginStart="270sp"
        android:layout_marginTop="-40dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/et_Nama"
        android:textColor="@android:color/white"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/iv_Gallery"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:drawablePadding="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:letterSpacing="0.1"
        tools:ignore="Autofill"
        android:inputType="textAutoComplete"
        android:background="@drawable/rounded_tv_border"
        android:hint="@string/name"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/et_Email"
        android:textColor="@android:color/white"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/et_Nama"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:drawablePadding="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:letterSpacing="0.1"
        tools:ignore="Autofill"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_tv_border"
        android:hint="@string/email"
        android:textColorHint="@android:color/white"/>

    <EditText
        android:id="@+id/et_Password"
        android:textColor="@android:color/white"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/et_Email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:drawablePadding="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:letterSpacing="0.1"
        tools:ignore="Autofill"
        android:inputType="textPassword"
        android:background="@drawable/rounded_tv_border"
        android:hint="@string/password"
        android:textColorHint="@android:color/white" />

    <Button
        android:id="@+id/bt_Sign_Up"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/et_Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_shape"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:letterSpacing="0.1"
        android:text="@string/sign_up" />

</RelativeLayout>