<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgotPassword">
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/et_email"
        android:textColor="@android:color/white"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:letterSpacing="0.1"
        android:background="@drawable/rounded_tv_border"
        tools:ignore="Autofill"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_email"
        android:hint="@string/email"
        android:textColorHint="@android:color/white" />

    <Button
        android:id="@+id/bt_resset"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_below="@id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:letterSpacing="0.2"
        android:text="@string/resset_pass" />
</RelativeLayout>
