<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_cover_detail"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:alpha="0.5"
            tools:background="#000000"
            app:layout_constraintEnd_toEndOf="@id/img_cover_detail"
            app:layout_constraintStart_toStartOf="@id/img_cover_detail"
            app:layout_constraintTop_toTopOf="@id/img_cover_detail"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="180dp"
            android:layout_height="250dp"
            android:layout_marginTop="180dp"
            android:scaleType="fitXY"
            android:transitionName="posterTransition"
            tools:background="@android:color/holo_red_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.129"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription"/>

        <RatingBar
            android:id="@+id/rb_star"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:isIndicator="true"
            android:theme="@style/GoldenRatingBar"
            android:transitionName="ratingBarTransition"
            app:layout_constraintStart_toStartOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster" />

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="18dp"
            android:drawableLeft="@drawable/ic_fav_blank"
            android:text="@string/favorite"
            app:layout_constraintBottom_toBottomOf="@+id/rb_star"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rb_star"
            app:layout_constraintTop_toTopOf="@+id/rb_star" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:text="@string/name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:transitionName="nameTransition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rb_star" />

        <TextView
            android:id="@+id/genre_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/genre"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />


        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="18dp"
            tools:text="@string/genre"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/genre_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/genre_label"
            app:layout_constraintTop_toTopOf="@+id/genre_label"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/year_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/release"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/genre_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/release"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/year_label"
            app:layout_constraintStart_toStartOf="@+id/tv_genre"
            app:layout_constraintTop_toTopOf="@+id/year_label" />

        <TextView
            android:id="@+id/lang_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/language"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/year_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_year" />

        <TextView
            android:id="@+id/tv_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/language"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/lang_label"
            app:layout_constraintStart_toStartOf="@+id/tv_year"
            app:layout_constraintTop_toTopOf="@+id/lang_label" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="26dp"
            android:text="@string/deskripsi"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lang_label"
            app:layout_constraintTop_toBottomOf="@+id/lang_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>